Little change to CSS styling and javascript code

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
   <body>
     <main>
       <div class="container">
-        <section class="player human-player">
+        <section class="player human-player winner">
           <p>Human</p>
           <p class="human-image"></p>
-          <p class="score">0</p>
+          <p class="score human-score">0</p>
         </section>
         <section class="player computer-player">
           <p>Computer</p>
           <p class="computer-image"></p>
-          <p class="score">0</p>
+          <p class="score computer-score">0</p>
         </section>
 
         <button id="newBtn">New Game</button>
