More changes to styling and js code

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </section>
         <section class="player computer-player">
           <p>Computer</p>
-          <p class="image computer-image">   <i class="fas fa-hand-rock"></i></p> 
+          <p class="image computer-image"></p>
           <p class="score computer-score">0</p>
         </section>
 
