--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
           <p class="score computer-score"></p>
         </section>
 
-        <button class="newBtn" id="newBtn">New Game</button>
+        <button class="newBtn" id="newBtn">
+          <i class="fa-solid fa-arrows-rotate"></i>New Game
+        </button>
 
         <div class="icons">
           <i class="fas fa-hand-rock icon-button" id="rock"></i>
