Added light-dark mode and made it responsive for all screens

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <body>
     <main>
       <p class="round-counter">Round:<span id="round"></span></p>
+      <!-- <button id="dark">Dark mode</button> -->
+      <i class="fa-solid fa-circle-half-stroke" id="dark"></i>
+
       <div class="container">
         <section class="player human-player winner" id="human">
           <p class="name">Human</p>
