--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rock,Paper,Scissors</title>
+    <title>Rock,Paper,Scissors Game</title>
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/querie.css" />
     <link
@@ -48,9 +48,18 @@
       <button class="close-modal">&times;</button>
       <h2>Keyboard Shortcuts</h2>
       <ul>
-        <li><span>1.</span>R or r for Rock.</li>
-        <li><span>2.</span>P or p for Paper.</li>
-        <li><span>3.</span>S or s for Scissors.</li>
+        <li>
+          <span>1.</span>R or r for Rock.
+          <i class="fas fa-hand-rock icon-button" id="rock"></i>
+        </li>
+        <li>
+          <span>2.</span>P or p for Paper.
+          <i class="fas fa-hand-paper icon-button" id="paper"></i>
+        </li>
+        <li>
+          <span>3.</span>S or s for Scissors.
+          <i class="fas fa-hand-scissors icon-button" id="scissors"></i>
+        </li>
         <li><span>4.</span>N or n for New Game.</li>
       </ul>
     </div>
