Removal of background color of buttons in the keyboard shortcuts modal

--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
       <ul>
         <li>
           <span>1.</span>R or r for Rock.
-          <i class="fas fa-hand-rock icon-button" id="rock"></i>
+          <i class="fas fa-hand-rock" id="rock"></i>
         </li>
         <li>
           <span>2.</span>P or p for Paper.
-          <i class="fas fa-hand-paper icon-button" id="paper"></i>
+          <i class="fas fa-hand-paper" id="paper"></i>
         </li>
         <li>
           <span>3.</span>S or s for Scissors.
-          <i class="fas fa-hand-scissors icon-button" id="scissors"></i>
+          <i class="fas fa-hand-scissors" id="scissors"></i>
         </li>
         <li><span>4.</span>N or n for New Game.</li>
       </ul>
