--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   </head>
   <body>
     <main>
-      <button class="shortcutBtn">Keyboard Shortcuts</button>
+      <button class="modalBtn shortcutBtn">Keyboard Shortcuts</button>
+      <button class="modalBtn editBtn">Edit Name</button>
+      <!-- <button class="modalBtn roundBtn">Number of round options</button> -->
 
       <p class="round-counter">Round:<span id="round"></span></p>
       <!-- <button id="dark">Dark mode</button> -->
@@ -21,7 +23,7 @@
 
       <div class="container">
         <section class="player human-player winner" id="human">
-          <p class="name">Human</p>
+          <p class="name human-name">Human</p>
           <p class="image human-image"></p>
           <p class="score human-score"></p>
         </section>
@@ -45,7 +47,7 @@
     </main>
 
     <div class="modal hidden">
-      <button class="close-modal">&times;</button>
+      <button class="close-modal modal1">&times;</button>
       <h2>Keyboard Shortcuts</h2>
       <ul>
         <li>
@@ -62,6 +64,14 @@
         </li>
         <li><span>4.</span>N or n for New Game.</li>
       </ul>
+    </div>
+
+    <div class="modal2 hidden">
+      <button class="close-modal2">&times;</button>
+      <h2>Edit Name</h2>
+      <p class="errorMessage" id="errorMessage" style="font-size: 1.8rem"></p>
+      <input type="text" class="editField" />
+      <button id="editNameBtn">Change</button>
     </div>
 
     <footer class="footer">
