Made the edit name modal responsive and added local storage to store the name, scores, background color, icons selected and number of rounds in local storage

--- a/index.html
+++ b/index.html
@@ -69,9 +69,12 @@
     <div class="modal2 hidden">
       <button class="close-modal2">&times;</button>
       <h2>Edit Name</h2>
-      <p class="errorMessage" id="errorMessage" style="font-size: 1.8rem"></p>
-      <input type="text" class="editField" />
-      <button id="editNameBtn">Change</button>
+      <p class="errorMessage" id="errorMessage"></p>
+
+      <div class="inputHolder">
+        <input type="text" class="editField" />
+        <button id="editNameBtn">Change</button>
+      </div>
     </div>
 
     <footer class="footer">
