Made the buttons more responsive

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
       <div class="container">
         <section class="player human-player winner" id="human">
-          <p class="name human-name">Human</p>
+          <div class="name human-name">Human</div>
           <p class="image human-image"></p>
           <p class="score human-score"></p>
         </section>
